feat: Steps M-S — Prometheus/Loki/Alertmanager/Trace providers, Evidence Taxonomy, LLM Proposer, Probe Execution Framework
Step M: Prometheus provider (43 tests), Step N: Loki provider (30), Step O: Alertmanager provider (45), Step P: Trace provider (66), Step Q: Evidence Taxonomy, Step R: LLM Proposer (51 LLM tests), Step S: Probe Executor (46 tests). Total: 484 tests, 0 failures, 11 modules.